1.0.4
	- Added a dialog 

1.0.3
	- fixed the issue with changes not persisting to storage.

1.0.2
	- fixed the process name for IIS. It will not affect any of your configurations, it will only fix the incorrectly named "wp3.exe" process to "w3wp.exe".

1.0.1
	- bug fix for items that are removed still showing in the menu
	- cleaner menu system. Items are now a submenu of Tools -> AttachToAny

1.0
	- Initial release.