@@ -132,7 +132,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AttachDescriptor.cs" />
-    <Compile Include="Dialog\ProcessItem.cs" />
+    <Compile Include="Models\ProcessItem.cs" />
     <Compile Include="Dialog\ProcessSelectionWindow.xaml.cs">
       <DependentUpon>ProcessSelectionWindow.xaml</DependentUpon>
     </Compile>
@@ -144,7 +144,7 @@
     <Compile Include="Extensions\Type.cs" />
     <Compile Include="ATAGuids.cs" />
     <Compile Include="MenuBuilder.cs" />
-    <Compile Include="Options\GeneralOptionsPage.cs">
+    <Compile Include="Dialog\GeneralOptionsPage.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Options\Migrator.cs" />
