@@ -15,6 +15,7 @@ using System.Windows.Media.Imaging;
 using System.Windows.Shapes;
 using Microsoft.VisualStudio.PlatformUI;
 using RyanConrad.AttachToAny.Extensions;
+using RyanConrad.AttachToAny.Models;
 
 namespace RyanConrad.AttachToAny.Dialog {
 	/// <summary>
