@@ -8,6 +8,7 @@ using System.Threading.Tasks;
 using System.Windows.Forms;
 using EnvDTE;
 using Microsoft.VisualStudio.Shell;
+using RyanConrad.AttachToAny.Dialog;
 using RyanConrad.AttachToAny.Options;
 
 namespace RyanConrad.AttachToAny {
@@ -49,10 +50,6 @@ namespace RyanConrad.AttachToAny {
 				var menuItem = new OleMenuCommand (
 					delegate ( object s, EventArgs e ) {
 						if ( OptionsPage.DTE != null ) {
-							// todo: multiple matches dialog.
-							// there should be some type of window to pick which process if there are multiple matches.
-
-				
 							var procList = new List<EnvDTE.Process>();
 
 							foreach ( EnvDTE.Process process in OptionsPage.DTE.Debugger.LocalProcesses ) {
@@ -65,7 +62,6 @@ namespace RyanConrad.AttachToAny {
 								return;
 							}
 
-
 							// Where there is only 1, or "best choice"
 							if ( procList.Count == 1 || !OptionsPage.ChooseProcess ) {
 								procList.First ( ).Attach ( );
@@ -73,7 +69,6 @@ namespace RyanConrad.AttachToAny {
 							}
 
 							AttachToAnyPackage.ShowProcessManagerDialog ( procList );
-
 						}
 					},
 					commandIdentifier,
